tests/ui/from-boxing-in-wrong-position.rs
use thiserror::Error;

#[derive(Debug, Error)]
#[from(boxing)]
enum E {
    #[error("...")]
    A,
}

fn main() {}
